# subdmain_ai_test

./: .gitignore  Cargo.toml
src/: main.rs  subdomain.rs
static/: index.html
