[package]
name = "subdomain-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
trust-dns-resolver = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
futures = "0.3"
urlencoding = "2.1"
x509-parser = "0.15" 